Created product view amd query products from server